--- a/EtecBookServer/EtecBookAPI/EtecBookAPI.csproj
+++ b/EtecBookServer/EtecBookAPI/EtecBookAPI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>Nullable</Nullable>
+    <Nullable>Disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
